fix: Add missing border radius to page images

--- a/src/styles/pages/page.module.scss
+++ b/src/styles/pages/page.module.scss
@@ -86,6 +86,7 @@
     float: left;
     width: 100%;
     margin-bottom: calc(variables.$base-spacing * 2);
+    border-radius: 5px;
 
     @include media.handheld-large {
       width: auto;
